# gphotofs

./: .cvsignore  .gitignore  .travis.yml  AUTHORS  ChangeLog  INSTALL  Makefile.am  NEWS  README  configure.ac  gphotofs.c  test-gphotofs.sh
po/: POTFILES.in
